# xgboost-fast-hist-perf-lab

./: .gitignore  CMakeLists.txt  README.md  c5.9xlarge-log.txt  test.sh
cmake/: OpenMP.cmake  Utils.cmake
include/perflab/: build_hist.h  data_structure.h
src/: build_hist.cc  main.cc
